# finance-tracker

./: .env.example  .gitignore  Makefile  TODO  pyproject.toml
bot/: __main__.py  config.py  main.py
bot/core/: config.py
bot/database/: __init__.py  crud.py  engine.py
bot/database/models/: __init__.py  bot_settings.py  budget.py  categories.py  goals.py  subscriptions.py  transactions.py  users.py
bot/filters/: admin_filter.py
bot/handlers/: __init__.py
bot/handlers/private/: __init__.py  admin.py  expenses.py  settings.py  start.py
bot/keyboards/: inline.py
bot/locales/en/LC_MESSAGES/: messages.po
bot/locales/ru/LC_MESSAGES/: messages.po
bot/locales/uz/LC_MESSAGES/: messages.po
bot/middlewares/: __init__.py  database.py  i18n.py  maintenance.py  throttling.py  user.py
bot/services/: admin_service.py  budget_service.py  category_service.py  expense_parser.py  transaction_service.py  user_service.py
bot/tests/: test_expense_parser.py
bot/utils/: __init__.py  formatters.py  helpers.py  logging_config.py  perf.py  text.py
